correct scrollbar bug and update my website

--- a/scss/base,/_base.scss
+++ b/scss/base,/_base.scss
@@ -13,14 +13,14 @@
 
 *::-webkit-scrollbar-track
 {
-	background: #e85237;
+	background: $color-primary;
 }
 
 *::-webkit-scrollbar-thumb
 {
-	background-color: #e4dcdb;
+	background-color: $text-color;
 	border-radius: 20px;
-	border: 3px solid #e85237;
+	border: 3px solid $color-primary;
 }
 
 *{
